--- a/CRMwebsite/templates/navbar.html
+++ b/CRMwebsite/templates/navbar.html
@@ -15,13 +15,18 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+
         {% if user.is_authenticated %}
+
         <li class="nav-item">
           <a class="nav-link" href="{% url 'logout' %}">Logout</a>
         </li>
         {% else %}
           <li class="nav-item">
             <a class="nav-link" href="{% url 'home' %}">Login</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'register' %}">Registrar-se</a>
           </li>
         {% endif %}
       </ul>
