--- a/CRMwebsite/templates/home.html
+++ b/CRMwebsite/templates/home.html
@@ -2,25 +2,45 @@
 
 {% block content %}
 
-<div class="col-md-6 offset-md-3">
 
 {% if user.is_authenticated %}
 
 <h1>Clientes:</h1>
-{%if clientes %}
-  {% for cliente in clientes %}
-    {{ cliente.id }}
-    {{ cliente }}
-    {{ cliente.email }}
-    {{ cliente.phone }}
-    {{ cliente.address }}
-    {{ cliente.city }}
-    {{ cliente.state }}
-    {{ cliente.cep }}
-    {{ cliente.created_at }}
-    <br/>
-  {% endfor %}
-{% endif %}
+
+<table class="table table-striped table-hover table-bordered">
+  <thead class="table-dark">
+    <tr>
+      <th scope="col">Id</th>
+      <th scope="col">Name</th>
+      <th scope="col">Email</th>
+      <th scope="col">Phone</th>
+      <th scope="col">Address</th>
+      <th scope="col">City</th>
+      <th scope="col">State</th>
+      <th scope="col">CEP</th>
+      <th scope="col">Criado em</th>
+    </tr>
+  </thead>
+  <tbody>
+    {%if clientes %}
+      {% for cliente in clientes %}
+      <tr>
+        <td>{{ cliente.id }}</td>
+        <td>{{ cliente }}</td>
+        <td>{{ cliente.phone }}</td>
+        <td>{{ cliente.email }}</td>
+        <td>{{ cliente.address }}</td>
+        <td>{{ cliente.city }}</td>
+        <td>{{ cliente.state }}</td>
+        <td>{{ cliente.cep }}</td>
+        <td>{{ cliente.created_at }}</td>
+      </tr>
+      {% endfor %}
+    {% endif %}
+  </tbody>
+</table>
+
+
 
 {% else %}
 
@@ -37,8 +57,6 @@
         </div> 
         <button type="submit" class="btn btn-secondary">Login</button>
 </form>
-
-</div>
 
 {% endif %}
 
