--- a/CRMwebsite/templates/home.html
+++ b/CRMwebsite/templates/home.html
@@ -6,6 +6,7 @@
 {% if user.is_authenticated %}
 
 <h1>Clientes:</h1>
+<br/>
 
 <table class="table table-striped table-hover table-bordered">
   <thead class="table-dark">
@@ -25,7 +26,7 @@
     {%if clientes %}
       {% for cliente in clientes %}
       <tr>
-        <td>{{ cliente.id }}</td>
+        <td><a href="{% url 'cliente' cliente.id %}">{{ cliente.id }}</a></td>
         <td>{{ cliente }}</td>
         <td>{{ cliente.phone }}</td>
         <td>{{ cliente.email }}</td>
@@ -43,7 +44,7 @@
 
 
 {% else %}
-
+<div class="col-md-6 offset-md-3">
 <h1>Login</h1>
 <br/>
 <form method="POST" action="{% url 'home' %}">
@@ -57,6 +58,7 @@
         </div> 
         <button type="submit" class="btn btn-secondary">Login</button>
 </form>
+</div>
 
 {% endif %}
 
