--- a/CRMwebsite/templates/navbar.html
+++ b/CRMwebsite/templates/navbar.html
@@ -17,7 +17,10 @@
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
         {% if user.is_authenticated %}
-
+        
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'add_record' %}">Adicionar</a>
+        </li>
         <li class="nav-item">
           <a class="nav-link" href="{% url 'logout' %}">Logout</a>
         </li>
